--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<version>3.1.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
